--- a/views/index.html
+++ b/views/index.html
@@ -14,12 +14,18 @@
   <table style="border:3px #06979E solid;" cellpadding="10">
     <tr>
       <td>
-        範例1 : <a href="http://localhost:3000/getSuperheroes"> 介接網路資源</a>
+        範例1 : 
+      </td>
+      <td>
+          <a href="http://localhost:3000/getSuperheroes"> 介接網路資源</a>
       </td>
     </tr>
     <tr>
       <td>
-        範例2 : <a href="http://localhost:3000/getMemberAddress"> 讀取本地JSON</a>
+        範例2 : 
+      </td>
+      <td>
+          <a href="http://localhost:3000/getMemberAddress"> 讀取本地JSON</a>
       </td>
     </tr>
   </table>
