index.html 新增取得所有一般會員 與 取得所有高級會員

--- a/views/index.html
+++ b/views/index.html
@@ -28,6 +28,22 @@
           <a href="http://localhost:3000/getMemberAddress"> 讀取本地JSON</a>
       </td>
     </tr>
+    <tr>
+        <td>
+          範例3 : 
+        </td>
+        <td>
+            <a href="http://localhost:3000/getAllNormalMember"> 取得資料庫所有一般會員</a>
+        </td>
+      </tr>
+      <tr>
+          <td>
+            範例4 : 
+          </td>
+          <td>
+              <a href="http://localhost:3000/getAllVIPMember"> 取得資料庫所有高級會員</a>
+          </td>
+        </tr>
   </table>
 </body>
 
