--- a/views/index.html
+++ b/views/index.html
@@ -14,36 +14,58 @@
   <table style="border:3px #06979E solid;" cellpadding="10">
     <tr>
       <td>
-        範例1 : 
+        範例1 :
       </td>
       <td>
-          <a href="http://localhost:3000/getSuperheroes"> 介接網路資源</a>
+        <a href="http://localhost:3000/getSuperheroes"> 介接網路資源</a>
       </td>
     </tr>
     <tr>
       <td>
-        範例2 : 
+        範例2 :
       </td>
       <td>
-          <a href="http://localhost:3000/getMemberAddress"> 讀取本地JSON</a>
+        <a href="http://localhost:3000/getMemberAddress"> 讀取本地JSON</a>
       </td>
     </tr>
     <tr>
-        <td>
-          範例3 : 
-        </td>
-        <td>
-            <a href="http://localhost:3000/getAllNormalMember"> 取得資料庫所有一般會員</a>
-        </td>
-      </tr>
-      <tr>
-          <td>
-            範例4 : 
-          </td>
-          <td>
-              <a href="http://localhost:3000/getAllVIPMember"> 取得資料庫所有高級會員</a>
-          </td>
-        </tr>
+      <td>
+        範例3 :
+      </td>
+      <td>
+        <a href="http://localhost:3000/getAllNormalMember"> 取得資料庫所有一般會員</a>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        範例4 :
+      </td>
+      <td>
+        <a href="http://localhost:3000/getAllVIPMember"> 取得資料庫所有高級會員</a>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        範例5 :
+      </td>
+      <td>
+        <p>新增一般會員</p>
+        名稱:<input type="text" name="normalName"></br>
+        地址:<input type="text" name="normalAddress"></br>
+        <button type="button" name="normalBuild">建立</button>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        範例6 :
+      </td>
+      <td>
+        <p>新增高級會員</p>
+        名稱:<input type="text" name="vipName"></br>
+        地址:<input type="text" name="vipAddress"></br>
+        <button type="button" name="vipBuild">建立</button>
+      </td>
+    </tr>
   </table>
 </body>
 
