分隔 前、後端，物件導向

--- a/views/home.html
+++ b/views/home.html
@@ -50,9 +50,9 @@
       </td>
       <td>
         <p>新增一般會員</p>
-        名稱:<input type="text" name="normalName"></br>
-        地址:<input type="text" name="normalAddress"></br>
-        <button type="button" name="normalBuild">建立</button>
+        名稱:<input type="text" id="normalName"></br>
+        地址:<input type="text" id="normalAddress"></br>
+        <button type="button" id="normalBuild">建立</button>
       </td>
     </tr>
     <tr>
@@ -61,9 +61,9 @@
       </td>
       <td>
         <p>新增高級會員</p>
-        名稱:<input type="text" name="vipName"></br>
-        地址:<input type="text" name="vipAddress"></br>
-        <button type="button" name="vipBuild">建立</button>
+        名稱:<input type="text" id="vipName"></br>
+        地址:<input type="text" id="vipAddress"></br>
+        <button type="button" id="vipBuild">建立</button>
       </td>
     </tr>
   </table>
