--- a/views/home.html
+++ b/views/home.html
@@ -7,6 +7,8 @@
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title><%= title%></title>
+
+  <script src="../routes/front_end/home_client.js"></script>
 </head>
 
 <body>
@@ -63,10 +65,9 @@
         <p>新增高級會員</p>
         名稱:<input type="text" id="vipName"></br>
         地址:<input type="text" id="vipAddress"></br>
-        <button type="button" id="vipBuild">建立</button>
+        <button type="button" id="vipBuild" onclick="onBuildMVPClickListener()">建立</button>
       </td>
     </tr>
   </table>
 </body>
-
 </html>
