--- a/views/home.html
+++ b/views/home.html
@@ -7,7 +7,7 @@
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title><%= title%></title>
-  <script src="http://localhost:3000/javascripts/home_client.js"></script>
+  <script src="http://localhost:3000/javascripts/home.js"></script>
 </head>
 
 <body>
